--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <p>
 Tarkvara Arendusprotsessi aines tehtud ainemapp kus on selle aine ja kõikide teiste ainete ülesanded ja muud saavutused kuvatud.   
 </p>
-<h2>Tarkvara Arendusprotsess:</h2>
+<h2>Tarkvara Arendusprotsess:
+    <a href=".SDLC/sdlc.html"></a>
+</h2>
 <br>
 ---------------------------------------------------
 <h2>Kes ma olen:</h2>
