--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 Tarkvara Arendusprotsessi aines tehtud ainemapp kus on selle aine ja kõikide teiste ainete ülesanded ja muud saavutused kuvatud.   
 </p>
 <h2>Tarkvara Arendusprotsess:
-    <a href=".SDLC/sdlc.html"></a>
+    <a href="SDLC/sdlc.html">Tarkvara Arendusprotsess</a>
 </h2>
 <br>
 ---------------------------------------------------
