--- a/SDLC/sdlc.html
+++ b/SDLC/sdlc.html
@@ -104,7 +104,7 @@
     <p>
         Alljärgnev nimekiri on näidetest erinevatest elutsüklimudelitest:
         <ul>
-            <li><a href="./waterfall.html"></a>Waterfall</li>
+            <li><a href="./waterfall.html">Waterfall</a></li>
         </ul>
     </p><br/>
 </body>
